--- a/drivers/media/i2c/Kconfig
+++ b/drivers/media/i2c/Kconfig
@@ -1213,6 +1213,7 @@ config VIDEO_OV13B10
 	  OV13B10 camera.
 
 config VIDEO_VS6624
+	depends on BROKEN
 	tristate "ST VS6624 sensor support"
 	depends on VIDEO_V4L2 && I2C
 	help
